[tool.poetry]
name = "vu-dp-rl-week3-assingment"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.4"
ipykernel = "^7.1.0"
plotly = "^6.4.0"
kaleido = "^1.2.0"
pandas = "^2.3.3"
nbformat = "^5.10.4"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
